src/test/scala/wacc/wacc_examples/invalid/syntaxErr/annotations/badlyPlaced.wacc
# annotation badly placed

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
    int @nowarn x = 5
end